Slightly improved version targetting and including composer.lock

--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
     "require": {
         "php": ">=5.4.0",
         "ext-eio": "*",
-        "react/event-loop": "0.4.*",
+        "react/event-loop": "^0.4",
         "react/promise": "~2.0",
-        "react/stream": "0.4.*",
+        "react/stream": "^0.4",
         "evenement/evenement": "~2.0"
     },
     "autoload": {
