--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "react/event-loop": "^0.4",
         "react/promise": "~1.0|~2.0",
         "react/stream": "^0.4",
+        "react/child-process": "~0.5.0-dev",
         "evenement/evenement": "~2.0"
     },
     "autoload": {
