--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "php": ">=5.4.0",
     "ext-eio": "^1.2",
     "react/event-loop": "^0.4",
-    "react/promise": "~1.0|~2.0",
+    "react/promise": "~2.2",
     "react/stream": "^0.4",
     "evenement/evenement": "~2.0"
   },
