--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
   "autoload": {
     "psr-4": {
       "React\\Filesystem\\": "src/"
-    }
+    },
+    "files": ["src/functions.php"]
   },
   "autoload-dev": {
     "psr-4": {
