--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,17 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "ext-eio": "^1.2",
     "react/event-loop": "^0.4",
     "react/promise": "~2.2",
     "react/stream": "^0.4",
-    "evenement/evenement": "~2.0"
+    "evenement/evenement": "~2.0",
+    "wyrihaximus/react-child-process-pool": "^1.0.0-alpha1"
+  },
+  "suggest": {
+    "ext-eio": "^1.2"
+  },
+  "require-dev": {
+    "ext-eio": "^1.2"
   },
   "autoload": {
     "psr-4": {
