--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "psr-4": {
       "React\\Filesystem\\": "src/"
     },
-    "files": ["src/functions.php"]
+    "files": ["src/functions_include.php"]
   },
   "autoload-dev": {
     "psr-4": {
