--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,10 @@
     "evenement/evenement": "~2.0",
     "wyrihaximus/react-child-process-pool": "^1.3"
   },
+  "require-dev": {
+    "clue/block-react": "^1.1",
+    "phpunit/phpunit": "^6.0 || ^5.0"
+  },
   "suggest": {
     "ext-eio": "^1.2",
     "ext-pthreads": "^2.0"
@@ -31,8 +35,5 @@
     "psr-4": {
       "React\\Tests\\Filesystem\\": "tests/"
     }
-  },
-  "require-dev": {
-    "clue/block-react": "^1.1"
   }
 }
