Force PHP 5.4 compatible dependencies

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   },
   "require-dev": {
     "clue/block-react": "^1.1",
-    "phpunit/phpunit": "^6.0 || ^5.0"
+    "phpunit/phpunit": "^6.0 || ^5.0 || ^4.8"
   },
   "suggest": {
     "ext-eio": "^1.2",
@@ -34,6 +34,12 @@
   "autoload-dev": {
     "psr-4": {
       "React\\Tests\\Filesystem\\": "tests/"
+    }
+  },
+  "config": {
+    "sort-packages": true,
+    "platform": {
+      "php": "5.4"
     }
   }
 }
