--- a/.travis.yml
+++ b/.travis.yml
@@ -5,20 +5,13 @@ cache:
     - $HOME/.composer/cache/files
 
 php:
-  - 5.4
-  - 5.5
-  - 5.6
   - 7.0
   - 7.1
   - 7.2
   - nightly
 
-matrix:
-  allow_failures:
-    - php: 5.4
-    - php: 7.1
-
 install:
+  - rm composer.lock
   - ./travis-init.sh
   - composer install -n
 
