--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": ">=5.4.0",
+    "php": ">=7.0.0",
     "evenement/evenement": "^3.0 || ^2.0",
     "react/event-loop": "^1.0 || ^0.5 || ^0.4",
     "react/promise": "~2.2",
@@ -20,7 +20,7 @@
   },
   "require-dev": {
     "clue/block-react": "^1.1",
-    "phpunit/phpunit": "^6.0 || ^5.0 || ^4.8"
+    "phpunit/phpunit": "^8.0 || ^7.0 || ^6.0"
   },
   "suggest": {
     "ext-eio": "^1.2"
@@ -37,9 +37,6 @@
     }
   },
   "config": {
-    "sort-packages": true,
-    "platform": {
-      "php": "5.4"
-    }
+    "sort-packages": true
   }
 }
