--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "react/promise": "~2.2",
     "react/promise-stream": "^1.1",
     "react/stream": "^1.0 || ^0.7 || ^0.6 || ^0.5 || ^0.4",
+    "paragonie/random_compat": "^9.0 || ^2.0",
     "wyrihaximus/react-child-process-pool": "^1.3"
   },
   "require-dev": {
