--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ php:
   - 7.4
   - nightly
 
+# lock distro so new future defaults will not break the build
+dist: trusty
+
 matrix:
   allow_failures:
     - php: 5.4
