--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
         os:
           - ubuntu-latest
           - windows-latest
+          - macos-latest
         php:
           - "8.1"
           - "8.0"
