--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         "react/event-loop": "^1.2",
         "react/promise": "^2.8",
         "react/promise-stream": "^1.2",
-        "react/stream": "^1.2",
-        "wyrihaximus/react-child-process-promise-closure": "^1.0"
+        "react/stream": "^1.2"
     },
     "require-dev": {
         "clue/block-react": "^1.4",
