Update test suite to use new reactphp/async package instead of clue/reactphp-block
See https://github.com/reactphp/async
Refs https://github.com/reactphp/socket/pull/296

--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
         "wyrihaximus/react-child-process-promise-closure": "^1.0"
     },
     "require-dev": {
-        "clue/block-react": "^1.4",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "react/async": "^4 || ^3"
     },
     "autoload": {
         "psr-4": {
